#file creator, rest, service and angularjs side modified

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -86,6 +86,22 @@ code {
     top: 7px;
 }
 
+.thumb-detail {
+    width: 196px;
+    height: 248px;
+    float: none;
+    position: relative;
+    top: 7px;
+}
+
+.thumb-basket {
+    width: 196px;
+    height: 364px;
+    float: none;
+    position: relative;
+    top: 7px;
+}
+
 form .progress {
     line-height: 15px;
 }
