--- a/src/main/resources/static/views/home.html
+++ b/src/main/resources/static/views/home.html
@@ -1,10 +1,13 @@
 <div class="jumbotron">
     <div class="row" style="margin-top: 64px;">
         <div class="col-sm-3 col-md-2 sidebar">
+            <div class="page-header">
+                <h3><span class="label label-default">Top Categories</span></h3>
+            </div>
             <ul class="nav nav-sidebar">
                 <li class="active" ng-repeat="category in categorys">
                     <div class="col-sm-3">
-                        <input type="radio" class="form-control" ng-model="selectedCategory" ng-change="getProduct(category.name)" value="category.name" name="category.name" />
+                        <input type="radio" class="form-control" ng-model="selectedCategory" data-ng-click="getProductByCategoryName(category)" value="category.name" name="category.name" />
                     </div>
                     <div class="col-sm-9">
                         <h3 class="">{{category.name}}</h3>
@@ -14,8 +17,17 @@
         </div>
         <div class="col-sm-9">
             <ul class="nav nav-sidebar">
-                <li class="active" ng-repeat="category in categorys2">
-                    <h3 class="">{{category.name}}</h3>
+                <li class="active" ng-repeat="product in products">
+                    <div class="col-sm-4 col-md-3">
+                        <div class="thumbnail">
+                            <img src="{{product.fileName}}" class="thumb-detail">
+                            <div class="caption">
+                                <h3>{{product.name}}</h3>
+                                <p>{{product.detail}}</p>
+                                <p><a class="btn btn-lg btn-primary" role="button" data-ng-click="getProductDetail(product)">Product Detail</a></p>
+                            </div>
+                        </div>
+                    </div>
                 </li>
             </ul>
         </div>
