--- a/src/main/resources/static/views/product/add-basket.html
+++ b/src/main/resources/static/views/product/add-basket.html
@@ -1,10 +1,67 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="jumbotron">
+    <form name="addBasketForm" ng-submit="submitProduct(productForm.$valid)" novalidate style="margin-top: 32px;">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="panel-title">Add Basket</h3>
+            </div>
+            <div class="panel-body" style="padding-top: 10px;">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="thumbnail">
+                            <img src="{{productDetails.fileName}}" class="thumb-basket">
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <h2>{{productDetails.name}}</h2>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6"><span class="label label-info">{{productDetails.price}}</span></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="col-sm-3">
+                                    <label class="control-label">Quantity </label>
+                                </div>
+                                <div class="col-sm-9">
+                                    <input type="text" class="form-control" id="quantity" ng-model="basket.quantity"
+                                           placeholder="Quantity" required="required"/>
+                                </div>
+                            </div>
+                            <div class="col-sm-2">
+                                <button class="btn btn-lg btn-primary">Add to Basket</button>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="panel panel-default">
+                                <div class="panel-body">
+                                    <div class="row">
+                                        <div class="col-sm-6">
+                                            <span class="label label-info">Detail : </span>
+                                            <label style="margin-left: 40px;">{{productDetails.detail}}</label>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm-6">
+                                            <span class="label label-info">Color : </span>
+                                            <label style="margin-left: 40px;">{{productDetails.color}}</label>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm-6">
+                                            <span class="label label-info">Size : </span>
+                                            <label style="margin-left: 40px;">{{productDetails.size}}</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-2"></div>
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
