--- a/src/main/resources/static/views/product/edit.html
+++ b/src/main/resources/static/views/product/edit.html
@@ -88,7 +88,7 @@
             <div class="container">
                 <div class="row form-group">
                     <div class="col-sm-3">
-                        <button type="btn btn-primary submit" ng-disabled="!product.name && !product.color " class="btn btn-lg btn-primary">Save Product</button>
+                        <button type="btn btn-primary submit" ng-disabled="!product.name || !product.color || !product.size || !categoryMultiSelectModel || !productFile" class="btn btn-lg btn-primary">Save Product</button>
                     </div>
                     <div class="col-sm-3">
                         <a type="button" class="btn btn-default" href="#/home">Cancel</a>
