--- a/src/main/resources/static/views/category/view.html
+++ b/src/main/resources/static/views/category/view.html
@@ -18,12 +18,12 @@
                     <table class="table table-bordered table-striped">
                         <thead>
                         <tr>
-                            <th>Category Name  535665656</th>
+                            <th>Category Name : {{categoryLink}}</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr>
-                            <td><strong>aasf</strong></td>
+                            <td><strong>Category Link : {{categoryName}}</strong></td>
                         </tr>
                         </tbody>
                     </table>
