--- a/src/main/resources/static/views/product/edit.html
+++ b/src/main/resources/static/views/product/edit.html
@@ -41,6 +41,16 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-sm-8">
+                        <div class="col-sm-3">
+                            <label class="control-label" for="price">Product Price</label>
+                        </div>
+                        <div class="col-sm-9">
+                            <input type="number" class="form-control" id="price" ng-model="product.price" placeholder="Product Price" required="required"/>
+                        </div>
+                    </div>
+                </div>
 
                 <div class="row">
                     <div class="col-sm-8">
@@ -88,7 +98,7 @@
             <div class="container">
                 <div class="row form-group">
                     <div class="col-sm-3">
-                        <button type="btn btn-primary submit" ng-disabled="!product.name || !product.color || !product.size || !categoryMultiSelectModel || !productFile" class="btn btn-lg btn-primary">Save Product</button>
+                        <button type="btn btn-primary submit" ng-disabled="!product.name || !product.color || !product.size || !product.price || !categoryMultiSelectModel || !productFile" class="btn btn-lg btn-primary">Save Product</button>
                     </div>
                     <div class="col-sm-3">
                         <a type="button" class="btn btn-default" href="#/home">Cancel</a>
